html file updated

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam quia repellat modi ex saepe explicabo, numquam excepturi. Beatae repellendus, repudiandae laborum cumque molestiae deleniti ipsum deserunt esse at harum vel velit numquam est temporibus quibusdam nesciunt consectetur ipsam dolorum. Suscipit consectetur culpa animi, accusamus est quos facere saepe eos perferendis eius eaque.</p>
 </body>
 </html>
